Bug 239098 - Bullets with certain special characters are not displayed properly
Summary: Bullets with certain special characters are not displayed properly
Status: VERIFIED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: doc (other bugs)
Version First Reported In: unspecified
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: Matus Uzak
URL:
Keywords:
: 239468 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-08-12 08:14 UTC by Lassi Nieminen
Modified: 2011-12-23 10:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
msword test document used to open in kword (29.00 KB, application/msword)
2009-08-12 08:14 UTC, Lassi Nieminen
Details
screenshot of the document in kword (166.25 KB, image/png)
2009-08-12 08:16 UTC, Lassi Nieminen
Details
screenshot of the document in MS Word 2003 (76.69 KB, image/png)
2009-08-12 08:16 UTC, Lassi Nieminen
Details
msword 2000 test document to be opened in kword (19.50 KB, application/msword)
2009-08-31 09:58 UTC, Lassi Nieminen
Details
msword 2003 document to be tested in kword. (63.50 KB, application/msword)
2009-12-15 11:24 UTC, Lassi Nieminen
Details
pyodconverter converted testdata (29.26 KB, application/x-zip-compressed)
2010-02-28 18:00 UTC, Lassi Nieminen
Details
koconverter converted testdata (3.94 KB, application/x-zip-compressed)
2010-02-28 18:02 UTC, Lassi Nieminen
Details
pyodconverter converted testdata opened in koffice screenshot (129.88 KB, image/png)
2010-02-28 18:04 UTC, Lassi Nieminen
Details
koconverter converted testdata opened in openoffice screenshot (101.52 KB, image/png)
2010-02-28 18:04 UTC, Lassi Nieminen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Faure 2010-05-28 02:51:09 UTC


---- Reported by lassi.ta.nieminen@nokia.com 2009-08-12 09:14:16 +0300 ----

Created an attachment
msword test document used to open in kword

SOFTWARE VERSION:
  Kubuntu 9.04
  Koffice (svn version 1007302)
  Test document (MS Word 2003): normal_bulleting_special.doc

STEPS LEADING TO THE PROBLEM:
  1. Open the attached document in MS Word 2003.
  2. Open the same document in KOffice.
  3. Observe the bullets in first page of the document.

EXPECTED OUTCOME:
  All the special characters used in bullets should be displayed 
  properly.
  see attachment normal_bulleting_special_msword_2003.png
    
ACTUAL OUTCOME:
  Some of the special characters used in bullets are not displayed 
  properly.
  see attachment  normal_bulleting_special_kword_1007302.png
  
FREQUENCY:
  Always



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-08-12 09:16:07 +0300 ----

Created an attachment
screenshot of the document in kword



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-08-12 09:16:35 +0300 ----

Created an attachment
screenshot of the document in MS Word 2003



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-08-31 10:58:43 +0300 ----

Created an attachment
msword 2000 test document to be opened in kword

ACTUAL OUTCOME FOR TESTDATA CREATED IN MSWORD 2000: svn rev - 1007302

Some of the special symbols/characters sre not displayed properly.
Attaching the test data.



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-12-04 10:35:59 +0200 ----

Reassigning bugs from Thomas to Lassi



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-12-15 12:24:36 +0200 ----

Created an attachment
msword 2003 document to be tested in kword.

In the attached testdata (symbol_bullets.doc), numbers get displayed instead of bulleted type of bullets.



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-02-28 19:00:36 +0200 ----

Created an attachment
pyodconverter converted testdata



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-02-28 19:02:08 +0200 ----

Created an attachment
koconverter converted testdata



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-02-28 19:04:02 +0200 ----

Created an attachment
pyodconverter converted testdata opened in koffice screenshot



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-02-28 19:04:33 +0200 ----

Created an attachment
koconverter converted testdata opened in openoffice screenshot

Observation (1096327): None of the converted testdata opens the document correctly.



--- Bug imported by faure@kde.org 2010-05-28 02:51  ---

This bug was previously known as _bug_ 132538.

Imported an attachment (id=44072)
Imported an attachment (id=44073)
Imported an attachment (id=44074)
Imported an attachment (id=44075)
Imported an attachment (id=44076)
Imported an attachment (id=44077)
Imported an attachment (id=44078)
Imported an attachment (id=44079)
Imported an attachment (id=44080)
Comment 1 Halla Rempt 2010-05-31 10:29:23 UTC
Change severity from major to normal, since we usually use only crash, normal and wish.
Comment 2 Halla Rempt 2010-05-31 10:41:22 UTC
Change severity from major to normal.
Comment 3 swathi 2010-12-04 10:42:26 UTC
*** Bug 239468 has been marked as a duplicate of this bug. ***
Comment 4 Matus Uzak 2011-08-25 17:08:53 UTC
Git commit 6cba54f7599b6ebcdcab1cfac174b762bcba01b5 by Matus Uzak.
Committed on 25/08/2011 at 19:02.
Pushed by uzak into branch 'master'.

DOC: Store correct bullet characters and provide the font information.

* Disabled the conversion of bullet characters, it does not make much sense at the moment.
* Providing <style:text-properties> in list-level-style-*.  The approach with a text style
  referrence in the text:style-name attribute does not work at the moment in the layout.
  The font information is not used.  Did not check the problem yet.

BUG:239098

M  +29   -13   filters/words/msword-odf/texthandler.cpp

http://commits.kde.org/calligra/6cba54f7599b6ebcdcab1cfac174b762bcba01b5
Comment 5 Matus Uzak 2011-08-25 17:16:12 UTC
The bullet size issue is already a known one, still no approach selected for the layout.  I will try to prepare a workaround in the filter.

Please report the bullet and list-item overlapping issue at the 9th list level - layout issue.
Comment 6 keerthi 2011-12-23 10:36:09 UTC
Verified in revision efd72bd27341ffe9a49d4e30352f9468bb49d99d