DOC: Store correct bullet characters and provide the font information.

* Disabled the conversion of bullet characters, it does not make much sense at the moment.
* Providing <style:text-properties> in list-level-style-*.  The approach with a text style
  referrence in the text:style-name attribute does not work at the moment in the layout.
  The font information is not used.  Did not check the problem yet.

BUG:239098