filters/words/msword-odf/texthandler.cpp
@@ -1978,8 +1978,9 @@ void WordsTextHandler::updateListStyle() throw(InvalidFormatException)
     }
     if (!fontName.isEmpty()) {
         textStyle.addProperty("style:font-name", fontName, KoGenStyle::TextType);
-        m_paragraph->applyCharacterProperties(listInfo->text().chp, &textStyle, m_paragraph->paragraphStyle());
     }
+    m_paragraph->applyCharacterProperties(listInfo->text().chp, &textStyle, m_paragraph->paragraphStyle());
+
     QString textStyleName('T');
     textStyleName = m_mainStyles->insert(textStyle, textStyleName);
 
@@ -2002,23 +2003,33 @@ void WordsTextHandler::updateListStyle() throw(InvalidFormatException)
             // With bullets, text can only be one character, which tells us
             // what kind of bullet to use
             unsigned int code = text[0].unicode();
-            // unicode: private use area (0xf000 - 0xf0ff).  FIXME: What does
-            // the previous comment mean, is it an interval or is it a minus
-            // sign?  Private use area is in <0xE000, 0xF8FF>
-            if ((code & 0xFF00) == 0xF000) {
-                if (code >= 0x20) {
-                    // microsoft symbol charset shall apply here.
-                    code = Conversion::MS_SYMBOL_ENCODING[code%256];
-                } else {
-                    code &= 0x00FF;
-                }
-            }
-            out.addAttribute("text:bullet-char", QString(code).toUtf8());
+            kDebug(30513) << "Bullet code: 0x" << hex << code << "id:" << code%256;
+
+            // NOTE: What does the next comment mean, private use area is in
+            // <0xE000, 0xF8FF>, disabled the conversion code.
+
+            // unicode: private use area (0xf000 - 0xf0ff).
+//             if ((code & 0xFF00) == 0xF000) {
+//                 if (code >= 0x20) {
+//                     // microsoft symbol charset shall apply here.
+//                     code = Conversion::MS_SYMBOL_ENCODING[code%256];
+// 		    kDebug(30513) << "Changed the symbol encoding: new code: 0x" << hex << code <<
+//                                       dec << "("<< code << ")";
+//                 } else {
+//                     code &= 0x00FF;
+//                 }
+//             }
+            out.addAttribute("text:bullet-char", QChar(code));
         } else {
             kWarning(30513) << "Bullet with more than one character, not supported";
         }
         //style:list-level-properties
         setListLevelProperties(out, pap, *listInfo);
+
+        //NOTE: helping the layout, the approach based on the text:style-name
+        //attribute does not work at the moment.
+        textStyle.writeStyleProperties(&out, KoGenStyle::TextType);
+
         out.endElement(); //text:list-level-style-bullet
     }
     // ------------------------
@@ -2135,6 +2146,11 @@ void WordsTextHandler::updateListStyle() throw(InvalidFormatException)
 
         //style:list-level-properties
         setListLevelProperties(out, pap, *listInfo);
+
+        //NOTE: helping the layout, the approach based on the text:style-name
+        //attribute does not work at the moment.
+        textStyle.writeStyleProperties(&out, KoGenStyle::TextType);
+
         out.endElement(); //text:list-level-style-number
     } //end numbered list
 
